Name:                Sumsq
Version:             0.1
Stability:           Experimental
Category:            Benchmarking
Build-type:          Simple
Cabal-version:       >=1.2

Executable Sumsq
  Main-is:             vect.hs
  Hs-Source-Dirs:      src ../_DphLib
  Build-depends:       base == 4.*,
                       dph-prim-par,
                       dph-lifted-copy,
                       old-time,
                       random
